--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.10"
-torch = {version = "^2.0.1+cu118", source = "pytorch-gpu-src"}
 bioseq = {git = "https://github.com/dnbaker/bioseq.git"}
 numpy = "^1.26.0"
-
-
-[[tool.poetry.source]]
-name = "pytorch-gpu-src"
-url = "https://download.pytorch.org/whl/cu118"
-priority = "explicit"
-
+torch = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
